--- a/ReportesElZarzal/App.config
+++ b/ReportesElZarzal/App.config
@@ -4,8 +4,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="ConProcesos_OP" connectionString="Server=LAPTOP-HDBE6F09\SQLEXPRESS;Database=ElZarzalBD3;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
-    <add name="ConInformeComponentes" connectionString="Server=LAPTOP-HDBE6F09\SQLEXPRESS;Database=ElZarzalDB;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
-    <!--<add name="ConInformeComponentes" connectionString="Server=myServerAddress;Database=myDataBase;User Id=myUsername;Password=myPassword;" providerName="System.Data.SqlClient"/>-->
+    <!--<add name="ConProcesos_OP" connectionString="Server=LAPTOP-HDBE6F09\SQLEXPRESS;Database=ElZarzalBD3;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
+    <add name="ConInformeComponentes" connectionString="Server=LAPTOP-HDBE6F09\SQLEXPRESS;Database=ElZarzalDB;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>-->
+    <add name="ConInformeComponentes" connectionString="Server=192.168.2.34;Database=UnoEE;User Id=consulta;Password=zarzal2017;" providerName="System.Data.SqlClient"/>
+    <add name="ConProcesos_OP" connectionString="Server=192.168.2.34;Database=Zarzal;User Id=consulta;Password=zarzal2017;" providerName="System.Data.SqlClient"/>
+
   </connectionStrings>
 </configuration>
